# cURLy

./: README.md  main.py  pyproject.toml  stats.py
templates/: features.html  index.html  linkstats.html
