[tool.poetry]
name = "curl"
version = "0.1.0"
description = ""
authors = ["Triska op <triskayt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
replit = "^2.0.0"
strings-pkg = "^0.0.1"
flask-cors = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
